--- a/w03_spatial_data.ipynb
+++ b/w03_spatial_data.ipynb
@@ -212,8 +212,8 @@
       "outputs": [],
       "source": [
         "df['Week']=df['Date'].dt.isocalendar().week\n",
-        "\n",
-        "print(df[['Week']])"
+        "print(df[['Week']])\n",
+        "\n"
       ]
     },
     {
@@ -321,7 +321,7 @@
         "plt.legend()"
       ],
       "metadata": {
-        "id": "G7aSPp1vdlpA"
+        "id": "RuYMMUSXPVKa"
       },
       "execution_count": null,
       "outputs": []
@@ -386,7 +386,10 @@
         "id": "XEMD4htxGe2E"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "counties=df.groupby(['COUNTY'])['AQI'].max('AQI').reset_index()\n",
+        "counties.sort_values(by='AQI',ascending=False)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -405,8 +408,8 @@
       },
       "outputs": [],
       "source": [
-        "highest=''\n",
-        "lowest=''\n",
+        "highest='Mono'\n",
+        "lowest='Humboldt'\n",
         "\n",
         "# Filter the county-level daily AQI readings for the worst-affected county\n",
         "worst_county=county_daily[county_daily['COUNTY']==highest]\n",
@@ -660,7 +663,44 @@
         "id": "Rk5UEgvBpQKY"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# create a variable with the date of interest, September 9th 2020.\n",
+        "date2='03-02-2020'\n",
+        "\n",
+        "# filter the original dataframe using this date\n",
+        "two_day=df[df['Date']==date2]\n",
+        "\n",
+        "# create a scatterplot of sensor locations using latitude and longitude\n",
+        "plt.scatter(\n",
+        "    x=two_day['longitude'],\n",
+        "    y=two_day['latitude'])\n",
+        "\n",
+        "# as always, label our axes and the plot!\n",
+        "plt.xlabel(\"Longitude\")\n",
+        "plt.ylabel(\"Latitude\")\n",
+        "plt.title(\"Geographic Distribution of AQI sensors in California\")\n",
+        "\n",
+        "map = Basemap(projection='lcc', resolution='l',\n",
+        "            lat_0=37.5, lon_0=-119,\n",
+        "            width=1E6, height=1.2E6)\n",
+        "\n",
+        "map.drawcoastlines(color='black')\n",
+        "map.drawcountries(color='black')\n",
+        "map.drawstates(color='gray')\n",
+        "\n",
+        "map.scatter(\n",
+        "      two_day['longitude'],\n",
+        "      two_day['latitude'],\n",
+        "      latlon=True,\n",
+        "      c=two_day['AQI'], # We're adding that\n",
+        "      cmap=aqi_colors,\n",
+        "      vmin=0,\n",
+        "      vmax=300)\n",
+        "\n",
+        "\n",
+        "plt.title('Air Quality on March 2nd, 2020')\n",
+        "plt.colorbar(label='Air Quality Index');"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -692,7 +732,7 @@
         "# let create an interactive Map object called \"satellite_map\"\n",
         "satellite_map = Map(\n",
         "  basemap=basemap_to_tiles( #this function lets us pick from a list of basemaps for our interactive map\n",
-        "    basemaps.NASAGIBS.ModisTerraTrueColorCR, \"2020-09-09\" # here we're specifying that we want MODIS imagery, and the date that we want it from\n",
+        "    basemaps.NASAGIBS.ModisAquaBands721CR, \"2020-09-09\" # here we're specifying that we want MODIS imagery, and the date that we want it from\n",
         "  ),\n",
         "  center=(36.77, -119.41), # then, we want to center the map on california. these coordinates do that\n",
         "  zoom=5, #finally, we want to set the zoom level of the map.\n",
@@ -725,7 +765,26 @@
         "id": "ks1pMWnwrZuM"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# import the map making modules from ipyleaflet\n",
+        "from ipyleaflet import Map, Marker, basemaps, basemap_to_tiles,Circle\n",
+        "from ipywidgets import HTML\n",
+        "\n",
+        "# let create an interactive Map object called \"satellite_map\"\n",
+        "satellite_map = Map(\n",
+        "  basemap=basemap_to_tiles( #this function lets us pick from a list of basemaps for our interactive map\n",
+        "    basemaps.NASAGIBS.ModisAquaBands721CR, \"2020-15-09\" # here we're specifying that we want MODIS imagery, and the date that we want it from\n",
+        "  ),\n",
+        "  center=(36.77, -119.41), # then, we want to center the map on california. these coordinates do that\n",
+        "  zoom=5, #finally, we want to set the zoom level of the map.\n",
+        ")\n",
+        "\n",
+        "# once we've created the map object we can make it bigger or smaller. let's make it 700 pixels tall.\n",
+        "satellite_map.layout.height = '700px'\n",
+        "\n",
+        "# now, we visualize it.\n",
+        "satellite_map"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -878,9 +937,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "satellite_plot('15-09-2020')"
+      ],
+      "metadata": {
+        "id": "3dn-YEU9Gv9K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LvTDBJTfWjUc"
+        "id": "6mVJO5CmOdTu"
       },
       "source": [
         "# Assessed Question\n",
@@ -894,6 +964,87 @@
         "\n",
         "QUESTION: how many of these sensors show running activity *within* the circle?"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "daily=df.groupby(['Date'])['AQI'].mean('AQI').reset_index()\n",
+        "daily.sort_values(by='AQI',ascending=False)"
+      ],
+      "metadata": {
+        "id": "rmrBwuNJG7MH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "September 17th 2020 had the worst airquality."
+      ],
+      "metadata": {
+        "id": "aucnWMgePhqV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "satellite_plot('14-09-2020')"
+      ],
+      "metadata": {
+        "id": "CO-Ek1udHt1k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_AQI='2020-09-14'\n",
+        "\n",
+        "date_AQI=df[df['Date']==date]\n",
+        "five_AQI= date_AQI.sort_values(by='AQI', ascending = False).head()\n",
+        "five_AQI"
+      ],
+      "metadata": {
+        "id": "N5eQggVJvZhO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def satellite_plot(date):\n",
+        "\n",
+        "  ymd=datetime.strptime(date, '%d-%m-%Y').strftime('%Y-%m-%d')\n",
+        "\n",
+        "  satellite_map = Map(\n",
+        "      basemap=basemap_to_tiles(\n",
+        "          basemaps.Strava.Run, ymd\n",
+        "      ),\n",
+        "      center=(36.77, -119.41),\n",
+        "      zoom=6,\n",
+        "  )\n",
+        "\n",
+        "  satellite_map.layout.height = '700px'\n",
+        "\n",
+        "  one_day=five_AQI[five_AQI['Date']==date]\n",
+        "\n",
+        "  for index, row in one_day.iterrows():\n",
+        "    color='yellow'\n",
+        "    point=Circle(location=(row['latitude'], row['longitude']), color=color)\n",
+        "    point.popop = HTML(str(row['Site Name']))\n",
+        "    satellite_map.add_layer(point)\n",
+        "  return satellite_map\n",
+        "\n",
+        "satellite_plot('14-09-2020')"
+      ],
+      "metadata": {
+        "id": "5cdTNbHIY9F6"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
